* Oct 18 2001 hship

Bump framework version up to 1.0.7.

junit:
- Make a successful run required to generate a build

framework:
- Improve the properties explorer, making it more robust
  in terms of exceptions and the browser back button
- Display request parameters earlier when emitting RequestContext
  as HTML
  
tutorial:
- Consolidate a bunch of one-off apps as pages in
  the new Workbench app
- Reorganize the Tutorial project to ease debugging

* Oct 8 2001 hship

Release 1.0.6

* Oct 8 2001 hship

doc:
- Fix up some errors in the Tutorial documentation, including
  the broken Inspector images
  
framework:
- Extend PropertyHelper to describe properties available for an instance
- Enhance the Inspector's Properties view to add the Property Explorer

junit:
- Fix parser test suite (related to CR/LF issues)
- Add master test suite for Tapestry
- Add test suite for PropertyHelper (and related)
- Add junit.properties file to allow JUnit to initialize
- Make use of the <junit> Ant task to run the tests

vlib:
- Fix problem in web.xml deployment descriptor (which broke private assets).
  
web:
- Update the "What's New" and "FAQ" pages.

* Sep 30 2001 hship

Removed all references to the Java Build Environment; Tapestry is now built using
Apache's ant tool.
Build Javadoc only from the Tapestry module level (not the individual project level),
and create a single Javadoc tree for the framework, contrib and examples together.
Start updating copyrights to remove Primix, replace with simply Howard Lewis Ship.

* Sep 28 2001 hship

framework:
- Include the framework version in the Shell's generator meta-tag.
- Make the inspector's restart button start in a new window, not the inspector window

[ #465749 ] invalid state -- HttpSession - restart service

* Sep 24 2001 hship

framework:
- Change the test used when searching for localized context assets
- Record render page and component page in direct service's context if different

tutorial: